---------------------------------------------------------------------------------------
- XTEC lib: Changed replace_url to support only a single URL (Trello #1027)
- Theme reactor-serveis-educatius: Improved menu and added search option in responsive version (Trello #981)
- Theme reactor: Fixed position of the legends of the images in custom galleries inserted in articles (Trello #1011)



Changes 15.11.16
---------------------------------------------------------------------------------------
- Moved activation script of Nodes to WordPress (Trello #996)
- Added support to activation script to serialized data in wp_postmeta (Trello #937)
- Blogger Importer: Upgraded to version 0.9 (Trello #936)
- wordpress-mu-common: Synced code with XTECBlocs. Changes have no effects to Nodes
- Stats widget: Added margin-bottom (Trello #1009)
- Theme reactor-primaria-1: Added new Color Palette "Purple and Green" (GitHub #307)
- Theme reactor-primaria-1: Improvements to CSS styles and moved content from common_css to code (GitHub #303)
- wp-recaptcha: Added default configuration for Nodes when activating plugin (Trello #926) 
- Added ability to decide if a client is "Servei Educatiu" (Trello #981)
- Added theme reactor-serveis-educatius (Trello #981)
- Check if the path is absolute or relative to mount the header link (Trello #1008)
- Fixed admin users not being able to delete users (Trello #991)
- Blocked access to install.php (Trello #521)
- Blocked access to bbpress administration to all users but xtecadmin (Trello #980)


Changes 15.10.09
---------------------------------------------------------------------------------------
- Updated catalan translation for WordPress 4.2.2 (Trello #793)
- Avoid deletion of main pages (Trello #909)
- Modified code to check if is xtecadmin or superadmin (Trello #902)
- Prevent the creation of restricted pages (Trello #871)
- Hidden text icon in the mobile version (GitHub #229)
- Grup-Classe: Second HTML box independent of first box (GitHub #228)